--- a/popup.html
+++ b/popup.html
@@ -110,14 +110,14 @@
         -moz-box-shadow: 0px 0px 0px 0px #3dc21b;
         -webkit-box-shadow: 0px 0px 0px 0px #3dc21b;
         box-shadow: 0px 0px 0px 0px #3dc21b;
-        background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #44c767), color-stop(1, #5cbf2a));
-        background:-moz-linear-gradient(top, #44c767 5%, #5cbf2a 100%);
-        background:-webkit-linear-gradient(top, #44c767 5%, #5cbf2a 100%);
-        background:-o-linear-gradient(top, #44c767 5%, #5cbf2a 100%);
-        background:-ms-linear-gradient(top, #44c767 5%, #5cbf2a 100%);
-        background:linear-gradient(to bottom, #44c767 5%, #5cbf2a 100%);
-        filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#44c767', endColorstr='#5cbf2a',GradientType=0);
-        background-color:#44c767;
+        background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #52a3f5), color-stop(1, #4394ea));
+        background:-moz-linear-gradient(top, #52a3f5 5%, #4394ea 100%);
+        background:-webkit-linear-gradient(top, #52a3f5 5%, #4394ea 100%);
+        background:-o-linear-gradient(top, #52a3f5 5%, #4394ea 100%);
+        background:-ms-linear-gradient(top, #52a3f5 5%, #4394ea 100%);
+        background:linear-gradient(to bottom, #52a3f5 5%, #4394ea 100%);
+        filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#52a3f5', endColorstr='#4394ea',GradientType=0);
+        background-color:#52a3f5;
         border:2px solid;
         display:inline-block;
         cursor:pointer;
@@ -132,14 +132,14 @@
       }
       
       #start_button:hover {
-        background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #5cbf2a), color-stop(1, #44c767));
-        background:-moz-linear-gradient(top, #5cbf2a 5%, #44c767 100%);
-        background:-webkit-linear-gradient(top, #5cbf2a 5%, #44c767 100%);
-        background:-o-linear-gradient(top, #5cbf2a 5%, #44c767 100%);
-        background:-ms-linear-gradient(top, #5cbf2a 5%, #44c767 100%);
-        background:linear-gradient(to bottom, #5cbf2a 5%, #44c767 100%);
-        filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#5cbf2a', endColorstr='#44c767',GradientType=0);
-        background-color:#5cbf2a;
+        background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #4394ea), color-stop(1, #52a3f5));
+        background:-moz-linear-gradient(top, #4394ea 5%, #52a3f5 100%);
+        background:-webkit-linear-gradient(top, #4394ea 5%, #52a3f5 100%);
+        background:-o-linear-gradient(top, #4394ea 5%, #52a3f5 100%);
+        background:-ms-linear-gradient(top, #4394ea 5%, #52a3f5 100%);
+        background:linear-gradient(to bottom, #4394ea 5%, #52a3f5 100%);
+        filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#4394ea', endColorstr='#52a3f5',GradientType=0);
+        background-color:#4394ea;
       }
       #start_button:active {
         position:relative;
