Changed version to 0.4

--- a/popup.html
+++ b/popup.html
@@ -17,16 +17,19 @@
 
       #duration_wrapper .left_arrow{
         float: left;
-        margin-right: 13px;
+        //margin-right: 13px;
         cursor: pointer;
       }
 
       #duration_wrapper .right_arrow{
         float: right;
-        margin-left: 13px;
+        //margin-left: 2px;
         cursor: pointer;
       }
       #duration_wrapper .duration{
+        margin-right: auto;
+        margin-left: auto;
+        margin-left: 10px;
         color:#287aa9;
       }
 
